--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -698,10 +698,10 @@
 
             Container2_4 As groupContainer.horizontalAutoLayoutContainer:
                 BorderColor: =RGBA(214, 221, 224, 1)
-                DropShadow: =DropShadow.Light
                 Height: =49
                 LayoutAlignItems: =LayoutAlignItems.Stretch
                 LayoutDirection: =LayoutDirection.Vertical
+                LayoutGap: =10
                 LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
@@ -721,6 +721,7 @@
 
                 Container12 As groupContainer.horizontalAutoLayoutContainer:
                     AlignInContainer: =AlignInContainer.SetByContainer
+                    DropShadow: =DropShadow.Light
                     FillPortions: =0
                     Height: =150
                     LayoutAlignItems: =LayoutAlignItems.Stretch
@@ -728,6 +729,12 @@
                     LayoutMinHeight: =100
                     LayoutMinWidth: =250
                     LayoutMode: =LayoutMode.Auto
+                    PaddingLeft: =5
+                    PaddingRight: =5
+                    RadiusBottomLeft: =4
+                    RadiusBottomRight: =4
+                    RadiusTopLeft: =4
+                    RadiusTopRight: =4
                     Visible: =If(!isLoading, wizardStep = 1)
                     ZIndex: =1
 
@@ -899,150 +906,168 @@
                             Y: =0
                             ZIndex: =5
 
-                TextCanvas5 As Text:
-                    AutoHeight: =false
-                    DisplayMode: =DisplayMode.Edit
-                    Height: =40
-                    LayoutMinHeight: =32
-                    LayoutMinWidth: =96
-                    Size: =16
-                    Text: ="Stavke prodaje"
-                    VerticalAlign: ='TextCanvas.VerticalAlign'.Middle
-                    Width: =96
-                    X: =0
-                    Y: =0
-                    ZIndex: =2
+                Container15 As groupContainer.verticalAutoLayoutContainer:
+                    DropShadow: =DropShadow.Light
+                    LayoutAlignItems: =LayoutAlignItems.Stretch
+                    LayoutDirection: =LayoutDirection.Vertical
+                    LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
+                    LayoutMinHeight: =100
+                    LayoutMinWidth: =250
+                    LayoutMode: =LayoutMode.Auto
+                    RadiusBottomLeft: =4
+                    RadiusBottomRight: =4
+                    RadiusTopLeft: =4
+                    RadiusTopRight: =4
+                    ZIndex: =4
 
-                "glr_ProLines As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
-                    AlignInContainer: =AlignInContainer.SetByContainer
-                    BorderColor: =App.Theme.Colors.Darker40
-                    Default: |-
-                        =LookUp(
-                            colLines,
-                            Barcode = ScannedItem,
-                            ThisRecord
-                        )
-                    DelayItemLoading: =true
-                    Fill: =RGBA(237, 237, 237, 1)
-                    Height: =562
-                    Items: =colLines
-                    Layout: =Layout.Vertical
-                    LayoutMinHeight: =Self.TemplateHeight * Self.AllItemsCount
-                    LayoutMinWidth: =320
-                    LoadingSpinner: =LoadingSpinner.Data
-                    OnSelect: |-
-                        =UpdateContext({wizardStep: 2});
-                        Set(
-                            ScannedItem,
-                            Blank()
-                        );
-                    TemplatePadding: =0
-                    TemplateSize: =164
-                    Visible: =If(!isLoading, wizardStep = 1)
-                    Width: =Parent.Width
-                    Y: =49
-                    ZIndex: =3
+                    TextCanvas5 As Text:
+                        AutoHeight: =false
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =40
+                        LayoutMinHeight: =32
+                        LayoutMinWidth: =96
+                        PaddingBottom: =0
+                        PaddingLeft: =5
+                        PaddingRight: =5
+                        PaddingTop: =5
+                        Size: =16
+                        Text: ="Stavke prodaje"
+                        VerticalAlign: ='TextCanvas.VerticalAlign'.Middle
+                        Width: =96
+                        X: =0
+                        Y: =0
+                        ZIndex: =1
 
-                    Separator6_4 As rectangle:
+                    "glr_ProLines As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
+                        AlignInContainer: =AlignInContainer.SetByContainer
                         BorderColor: =App.Theme.Colors.Darker40
-                        Fill: =RGBA(255, 255, 255, 1)
-                        Height: =8
-                        OnSelect: =Select(Parent)
-                        Width: =Parent.TemplateWidth
-                        Y: =Parent.TemplateHeight - Self.Height
-                        ZIndex: =5
+                        Default: |-
+                            =LookUp(
+                                colLines,
+                                Barcode = ScannedItem,
+                                ThisRecord
+                            )
+                        DelayItemLoading: =true
+                        Fill: =RGBA(237, 237, 237, 1)
+                        Height: =562
+                        Items: =colLines
+                        Layout: =Layout.Vertical
+                        LayoutMinHeight: =Self.TemplateHeight * Self.AllItemsCount
+                        LayoutMinWidth: =320
+                        LoadingSpinner: =LoadingSpinner.Data
+                        OnSelect: |-
+                            =UpdateContext({wizardStep: 2});
+                            Set(
+                                ScannedItem,
+                                Blank()
+                            );
+                        TemplatePadding: =0
+                        TemplateSize: =164
+                        Visible: =If(!isLoading, wizardStep = 1)
+                        Width: =Parent.Width
+                        Y: =49
+                        ZIndex: =2
 
-                    Rectangle5_5 As rectangle:
-                        BorderColor: =App.Theme.Colors.Darker40
-                        Fill: =App.Theme.Colors.Darker30
-                        Height: =Parent.TemplateHeight - Separator6_4.Height
-                        OnSelect: =Select(Parent)
-                        Visible: =ThisItem.IsSelected
-                        Width: =1
-                        ZIndex: =6
-
-                    Group2_2 As group:
-                        Height: =5
-                        Width: =5
-                        X: =40
-                        Y: =40
-                        ZIndex: =14
-
-                        Title5_4 As label:
-                            Color: =RGBA(50, 49, 48, 1)
-                            DisabledColor: =RGBA(166, 166, 166, 1)
-                            Font: =App.Theme.Font
-                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                            Height: =22
+                        Separator6_4 As rectangle:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Fill: =RGBA(255, 255, 255, 1)
+                            Height: =8
                             OnSelect: =Select(Parent)
-                            PaddingBottom: =0
-                            PaddingLeft: =20
-                            PaddingRight: =20
-                            PaddingTop: =0
-                            Size: =12
-                            Text: |-
-                                ="Br. artikla:   " & ThisItem.Item_No
-                            VerticalAlign: =VerticalAlign.Top
                             Width: =Parent.TemplateWidth
-                            Y: =18
-                            ZIndex: =1
+                            Y: =Parent.TemplateHeight - Self.Height
+                            ZIndex: =5
 
-                        Subtitle4_2 As label:
-                            Color: =RGBA(0, 0, 0, 1)
-                            DisabledColor: =RGBA(166, 166, 166, 1)
-                            Font: =App.Theme.Font
-                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                            Height: =22
+                        Rectangle5_5 As rectangle:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Fill: =App.Theme.Colors.Darker30
+                            Height: =Parent.TemplateHeight - Separator6_4.Height
                             OnSelect: =Select(Parent)
-                            PaddingBottom: =0
-                            PaddingLeft: =20
-                            PaddingRight: =20
-                            PaddingTop: =0
-                            Size: =12
-                            Text: |-
-                                ="Naziv artikla:   " & ThisItem.Description
-                            VerticalAlign: =VerticalAlign.Top
-                            Width: =Parent.TemplateWidth
-                            Y: =52
-                            ZIndex: =2
+                            Visible: =ThisItem.IsSelected
+                            Width: =4
+                            ZIndex: =6
 
-                        Body1_13 As label:
-                            Color: =RGBA(0, 0, 0, 1)
-                            DisabledColor: =RGBA(166, 166, 166, 1)
-                            Font: =App.Theme.Font
-                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                            Height: =18
-                            OnSelect: =Select(Parent)
-                            PaddingBottom: =0
-                            PaddingLeft: =20
-                            PaddingRight: =20
-                            PaddingTop: =0
-                            Size: =12
-                            Text: |-
-                                ="Količina za slanje:    " & ThisItem.'Qty-to_Ship'
-                            VerticalAlign: =VerticalAlign.Top
-                            Width: =Parent.TemplateWidth
-                            Y: =121
-                            ZIndex: =3
+                        Group2_2 As group:
+                            Height: =5
+                            Width: =5
+                            X: =40
+                            Y: =40
+                            ZIndex: =14
 
-                        Body1_12 As label:
-                            Color: =RGBA(0, 0, 0, 1)
-                            DisabledColor: =RGBA(166, 166, 166, 1)
-                            Font: =App.Theme.Font
-                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                            Height: =22
-                            OnSelect: =Select(Parent)
-                            PaddingBottom: =0
-                            PaddingLeft: =20
-                            PaddingRight: =20
-                            PaddingTop: =0
-                            Size: =12
-                            Text: |-
-                                ="Količina:    " & ThisItem.Quantity
-                            VerticalAlign: =VerticalAlign.Top
-                            Width: =Parent.TemplateWidth
-                            Y: =87
-                            ZIndex: =10
+                            Title5_4 As label:
+                                Color: =RGBA(50, 49, 48, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
+                                FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                                Height: =22
+                                OnSelect: =Select(Parent)
+                                PaddingBottom: =0
+                                PaddingLeft: =20
+                                PaddingRight: =20
+                                PaddingTop: =0
+                                Size: =12
+                                Text: |-
+                                    ="Br. artikla:   " & ThisItem.Item_No
+                                VerticalAlign: =VerticalAlign.Top
+                                Width: =Parent.TemplateWidth
+                                Y: =18
+                                ZIndex: =1
+
+                            Subtitle4_2 As label:
+                                Color: =RGBA(0, 0, 0, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
+                                FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                                Height: =22
+                                OnSelect: =Select(Parent)
+                                PaddingBottom: =0
+                                PaddingLeft: =20
+                                PaddingRight: =20
+                                PaddingTop: =0
+                                Size: =12
+                                Text: |-
+                                    ="Naziv artikla:   " & ThisItem.Description
+                                VerticalAlign: =VerticalAlign.Top
+                                Width: =Parent.TemplateWidth
+                                Y: =52
+                                ZIndex: =2
+
+                            Body1_13 As label:
+                                Color: =RGBA(0, 0, 0, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
+                                FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                                Height: =18
+                                OnSelect: =Select(Parent)
+                                PaddingBottom: =0
+                                PaddingLeft: =20
+                                PaddingRight: =20
+                                PaddingTop: =0
+                                Size: =12
+                                Text: |-
+                                    ="Količina za slanje:    " & ThisItem.'Qty-to_Ship'
+                                VerticalAlign: =VerticalAlign.Top
+                                Width: =Parent.TemplateWidth
+                                Y: =121
+                                ZIndex: =3
+
+                            Body1_12 As label:
+                                Color: =RGBA(0, 0, 0, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                Font: =App.Theme.Font
+                                FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                                Height: =22
+                                OnSelect: =Select(Parent)
+                                PaddingBottom: =0
+                                PaddingLeft: =20
+                                PaddingRight: =20
+                                PaddingTop: =0
+                                Size: =12
+                                Text: |-
+                                    ="Količina:    " & ThisItem.Quantity
+                                VerticalAlign: =VerticalAlign.Top
+                                Width: =Parent.TemplateWidth
+                                Y: =87
+                                ZIndex: =10
 
             Container14 As groupContainer.verticalAutoLayoutContainer:
                 DropShadow: =DropShadow.Light
